@@ -215,7 +215,7 @@
         <font>
             <name>font_epg_timeline</name>
             <filename>RobotoCondensed-Regular.ttf</filename>
-            <size>18</size>
+            <size>24</size>
         </font>
         
 
