@@ -4,6 +4,8 @@ LEIA - Add support for artwork beef artwork helper for extrafanart
 Fix settings widget focus text
 Fix settings labels
 Cycle time of extrafanart reduced to 7 seconds
+Lowercase text in epg
+Show start/end time in epg when genre name disabled
 
 [B]0.9.18[/B]
 LEIA - Fix some PVR recording and some infolabels
